# SABT

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  main.cpp
.github/workflows/: cmake.yml  tests.yml
core/: CMakeLists.txt  SABT.h  main.cpp
core/include/: AlignedRect.h  Angle.h  BasicMath.h  Beam.h  BeamRenderer.h  BeamTracer.h  BeamTracerRoot.h  Biplet.h  BoundingBox.h  CImg.h  Camera.cpp  Camera.h  Color.h  ConnectedStack.h  Cube.h  ExplicitIntersections.h  Filling.h  GJK.h  Geometry.h  Grid.h  Mat.h  Mesh.h  ObjLoader.h  Octree.h  OctreeBase.h  OctreeNode.h  OctreeRoot.h  OctreeUnit.h  Point3D.h  Polygon.h  Polytope.h  Ray.h  Renderer.h  Shape2d.h  Shape3d.h  Triangle.h  Triplet.h  Vec2f.h  Vec3f.h  Vec3i.h  (+1 more)
core/source/: AlignedRect.cpp  Angle.cpp  Beam.cpp  BeamRenderer.cpp  BeamTracer.cpp  BeamTracerRoot.cpp  BoundingBox.cpp  Camera.cpp  Color.cpp  Cube.cpp  ExplicitIntersections.cpp  Geometry.cpp  Grid.cpp  Mesh.cpp  Octree.cpp  OctreeBase.cpp  OctreeRoot.cpp  OctreeUnit.cpp  OstreamOverloads.cpp  Polygon.cpp  Polytope.cpp  Ray.cpp  Shape3d.cpp  Triangle.cpp  Vec2f.cpp  Vec3f.cpp  Vec3i.cpp
demo/: CMakeLists.txt  main.cpp
demo/include/: Color.h  GetPath.h  Rect.h  Renderer.h
demo/source/: Renderer.cpp
docs/: README.md  conf.py  requirements.txt
docs/doxygen/: Doxyfile.in
gui/: CMakeLists.txt  main.cpp
gui/include/: Rect.cpp  Renderer.h
gui/source/: Renderer.cpp
include/: Beam.h  ConnectedStack.h  Octree.h
source/: ConnectedStack.cpp
tests/: BeamTest.cpp  CMakeLists.txt  CameraTest.cpp  ExplicitIntersectionsTest.cpp  GJKTest.cpp  MatTest.cpp  OctreeTest.cpp  RayTest.cpp  Shape3dTest.cpp  StackTest.cpp  TripletTest.cpp  example.cpp  stack.cpp
